--- a/src/Pages/Error/Error.css
+++ b/src/Pages/Error/Error.css
@@ -1,5 +1,4 @@
 .body-error {
-  min-height: calc(100vh - 30px); /* Content Height - Security Padding */
   display: flex;
   flex-flow: column;
 }
@@ -9,6 +8,8 @@
 }
 
 .error-info-body {
+  min-height: 780px;
+  box-sizing: border-box;
   padding: 10px;
   margin: 0 6px;
   font-size: 20px;
